# mcanalysis

./: .gitignore  DATA_PREPARATION_GUIDE.md  LICENSE  README.md
python-package/: README.md  pyproject.toml  setup.py
python-package/mcanalysis/: __init__.py  analysis.py  exploratory.py  models.py  processing.py  visualization.py
r-package/mcanalysis/: DESCRIPTION  NAMESPACE
r-package/mcanalysis/R/: analysis.R  exploratory.R  models.R  process_cycles.R  visualization.R
r-package/mcanalysis/man/: add_dummy_day.Rd  analyze_confounders.Rd  create_fourier_basis.Rd  data_summary.Rd  filter_cycles.Rd  filter_users.Rd  find_turning_points.Rd  fit_gam.Rd  fit_phase_models.Rd  mc_analysis.Rd  mc_plot.Rd  mc_plot_confounders.Rd  mc_summary.Rd  normalize_outcome.Rd  plot.mcanalysis.Rd  plot_confounder_distributions.Rd  plot_confounder_effects.Rd  plot_cycle_effect.Rd  plot_cycle_lengths.Rd  plot_observations_per_user.Rd  plot_outcome_distribution.Rd  print.mcanalysis.Rd  process_periods.Rd  run_exploratory_analysis.Rd
shiny-app/: README.md  app.R
shiny-app/R/: analysis.R  models.R
shiny-app/rsconnect/shinyapps.io/kyradelray/: mcanalysis.dcf  shiny-app.dcf
